resize tour guide graphic

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section class="tour-guide" id="tour">
         <div class="container">
             <h2 class="section-title">Catch Me On Tour</h2>
-            <img src="images/tour-guide-graphic.jpg" alt="ovy g tour guide">
+            <img src="images/tour-guide-graphic.jpg" alt="ovy g tour guide" class="tour-graphic">
         </div>
     </section>
 
