update footer font

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="container">
-            <h2 class="contact-title">Book the Vibe</h2>
+            <h2 class="section-title">Book the Vibe</h2>
             <p class="contact-subtitle">Contact</p>
             <a href="mailto:booking@ouyg.com" class="contact-email">booking@ovy.world</a>
             <p class="contact-text">to book your event</p>
