hero image cross fade animation

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                     <h3>Amapiano</h3>
                     <h3>Afrohouse</h3>
                 </div>
-            <div class="hero-image">
-                <img src="images/ovy-g-international-dj-hero-image.JPG" alt="OVY G" loading="lazy">
-            </div>
+            <div class="hero-image-rotator">
+                <img src="images/ovy-g-international-dj-hero-image-one.JPG" class="fade-img img-top" alt="OVY G on gradient background">
+                <img src="images/ovy-g-international-dj-hero-image-two.JPG" class="fade-img img-bottom" alt="OVY G on gradient background">
+              </div>
             
             
             <a href="#tour" class="btn btn-primary">View Tour Dates</a>
