update playlist button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   </div>
               
                   <a href="https://ffm.to/2e9aq7k..." target="_blank" class="btn btn-secondary">
-                    Listen on Your Streaming Platform
+                    Listen on Your Favorite Streaming Platform
                   </a>
                   
                 </div>
